Them mot so design pattern

--- a/QUANLYQUAYTHUOC/QUANLYQUAYTHUOC/QUANLYQUAYTHUOC.csproj
+++ b/QUANLYQUAYTHUOC/QUANLYQUAYTHUOC/QUANLYQUAYTHUOC.csproj
@@ -189,6 +189,7 @@
     <Compile Include="AppForm\InvoiceReport.Designer.cs">
       <DependentUpon>InvoiceReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="AppProcess\PrinterStrategy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AppForm\BanHangForm.resx">
